--- a/.dockerignore
+++ b/.dockerignore
@@ -1,26 +1,11 @@
+.travis.yaml
+.openapi-generator-ignore
+README.md
+tox.ini
+git_push.sh
+test-requirements.txt
+setup.py
 
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -68,9 +53,7 @@ coverage.xml
 *,cover
 .hypothesis/
 venv/
-.venv/
 .python-version
-.pytest_cache
 
 # Translations
 *.mo
