--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
+    "react-diff-viewer": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "sass": "^1.63.4"
